# mkdocs-matplotlib

./: .cz.toml  .envrc  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  Makefile  README.md  mkdocs.yml  pyproject.toml  setup.cfg
.github/workflows/: bump.yml  conde_quality.yml  release.yml  test.yml
docs/: index.md  requirements.txt
docs/assets/css/: extras.css
docs/markdown/: code.md  licence.md
src/mkdocs_matplotlib/: __init__.py  plugin.py
tests/: mkdocs.yml  test_build.sh
tests/docs/: index.md
tests/docs/text/: text.md
