[tool.poetry]
name = "mkdocs_matplotlib"
version = "0.1.0"
description = "Live rendering of python code using matplotlib"
authors = ["An Hoang <an.hoang@statworx.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.8.9"
mkdocs = ">=1.3.0"
mkdocs-material = ">=8.2.8"
beautifulsoup4 = ">=4.11.1"
seaborn = "^0.11.2"

[tool.poetry.dev-dependencies]
black = ">=22.3.0"
commitizen = ">=2.21.2"
darglint = ">=1.8.1"
flake8 = ">=4.0.1"
ipykernel = ">=6.9.2"
ipython = ">=7.31.1"
pytest = ">=7.1.0"
mkdocstrings-python = ">=0.6.6"
mkdocstrings = ">=0.18.1"
pre-commit = ">=2.18.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."mkdocs.plugins"]
mkdocs_matplotlib = "mkdocs_matplotlib.plugin:RenderPlugin"
